# zeekerscrapers

./: .gitignore  LICENSE  README.md  pyproject.toml
about_singapore_law/: scrapy.cfg
about_singapore_law/about_singapore_law/: items.py  middlewares.py  pipelines.py  settings.py
about_singapore_law/about_singapore_law/spiders/: slw.py
app/core/: config.py
app/db/: session.py
common/: ZeekerDownloadFilePipeline.py  ZeekerItem.py  ZeekerItemAddtoSQLPipeline.py  ZeekerItemModel.py  init_db.py  settings.py
common/tests/: test_ZeekerItemAddtoSQLPipeline.py  test_settings.py
pdpcSpider/: scrapy.cfg
pdpcSpider/pdpcSpider/: items.py  models.py  pipelines.py  settings.py
pdpcSpider/pdpcSpider/spiders/: CommissionDecisionSpider.py
pdpcSpider/pdpcSpider/tests/: test_items.py  test_pipelines.py  test_spider.py
pdpcSpider/pdpcSpider/tests/cassettes/test_pipelines/: test_CommissionDecisionSummaryPagePipeline_process_item.yaml
pdpcSpider/pdpcSpider/tests/cassettes/test_spider/: test_start_url.yaml
pdpcSpider/tests/: test_pipelines.py  test_spider.py
stateCourtSpider/: scrapy.cfg
stateCourtSpider/stateCourtSpider/: items.py  models.py  pipelines.py  settings.py
stateCourtSpider/stateCourtSpider/spiders/: latestJudgmentsStateCourtSpider.py
stateCourtSpider/stateCourtSpider/tests/: test_latestJudgmentsStateCourtSpider.py
stateCourtSpider/stateCourtSpider/tests/cassettes/test_latestJudgmentsStateCourtSpider/: test_start_url.yaml
