[tool.poetry]
name = "zeekerscrapers"
version = "0.1.0"
description = ""
authors = ["houfu <houfu@outlook.stg>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
sqlmodel = "^0.0.8"
html5lib = "^1.1"
spacy = "^3.4.1"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-sugar = "^0.9.5"
pytest-cov = "^3.0.0"
pytest-recording = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
